fix: resolves bug align navbar icon and text

--- a/frontend/src/app/components/nav/nav.component.css
+++ b/frontend/src/app/components/nav/nav.component.css
@@ -9,6 +9,7 @@
 }
 
 img {
+
   width: 100%;
   height: 7rem;
   margin: .8rem auto 1rem auto;
@@ -16,15 +17,21 @@ img {
 
 .sidenav a {
   color: white;
+
 }
 
 .sidenav i {
   color: white;
-  margin-right: .6rem;
 }
 
 .menu {
-  margin: 1rem 0 0 1rem;
   color: white;
   background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgba(37,97,207,1) 0%, rgba(0,212,255,1) 100%);
+}
+.list-item{
+  display: flex;
+  justify-content: flex-start;
+  gap: 1rem;
+  align-items: flex-end;
+  color: #ffff;
 }
